--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,72 @@
+appnope==0.1.0
+asn1crypto==0.24.0
+attrs==19.1.0
+backcall==0.1.0
+bcrypt==3.1.5
+beautifulsoup4==4.7.1
+bleach==3.1.0
+blinker==1.4
+certifi==2019.3.9
+#cffi==1.11.5
+cryptography==2.4.2
+decorator==4.4.0
+defusedxml==0.6.0
+docutils==0.14
+entrypoints==0.3
+fabric==2.4.0
+feedgenerator==1.9
+ghp-import==1.0.0
+idna==2.8
+invoke==1.2.0
+ipykernel==5.1.0
+ipython==7.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.3
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+latexcodec==2.0.1
+Markdown==3.0.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==5.7.8
+pandocfilters==1.4.2
+paramiko==2.4.2
+parso==0.4.0
 pelican==3.7.1
-Markdown
-fabric
-beautifulsoup4
+pexpect==4.7.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+pyasn1==0.4.5
+pybtex==0.23.0
+pycparser==2.19
+Pygments==2.3.1
+PyNaCl==1.3.0
+pyrsistent==0.14.11
+python-dateutil==2.8.1
+pytz==2018.9
+PyYAML==5.3.1
+#pyzmq==18.0.0
+pyzmq
+qtconsole==4.4.3
+Send2Trash==1.5.0
+six==1.12.0
+smartypants==2.0.1
+soupsieve==1.8
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.2
+traitlets==4.3.2
+typogrify==2.0.7
+Unidecode==1.0.23
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
